add wrist light proto pic

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 					</p>
 					<img src="assets/files/images/mgp3/wrist_cup_sketch.png" class="image centered" width="60%" alt="">
 					<img src="assets/files/images/mgp3/wrist_cup_proto.jpg" class="image centered" width="60%" alt="">
+					<img src="assets/files/images/mgp3/wrist_light.jpg" class="image centered" width="60%" alt="">
 					<h3>Parallel Prototyping - RC Wheel</h3>
 					<p>
 						Using a Nintendo Ring Fit Adventure wheel controller, we could attach the 
