more descriptive about final idea

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
 						3 interaction concepts and created low-fidelity prototypes.
 					</p>
 					<img src="assets/files/images/mgp3/mgp3_ideas.png" class="image centered" width="60%" alt="">
-					<h3>Parallel Prototyping - Wrist Cup, Wrist Light</h3>
+					<h3>Parallel Prototyping - What can IMUs do?</h3>
+					<b>Wrist Cup, Wrist Light</b>
 					<p>
 						To take advantage of IMU's gyroscope, we could attach the electronics to a human wrist.
 						We thought of attaching a cup or small flashlight to the electronics glove.
@@ -133,7 +134,7 @@
 					<img src="assets/files/images/mgp3/wrist_cup_sketch.png" class="image centered" width="60%" alt="">
 					<img src="assets/files/images/mgp3/wrist_cup_proto.jpg" class="image centered" width="60%" alt="">
 					<img src="assets/files/images/mgp3/wrist_light.jpg" class="image centered" width="60%" alt="">
-					<h3>Parallel Prototyping - RC Wheel</h3>
+					<b>RC Wheel</b>
 					<p>
 						Using a Nintendo Ring Fit Adventure wheel controller, we could attach the 
 						circuitry to the wheel and read steering information. RC cars typically have
@@ -143,8 +144,9 @@
 					<video width="320" height="240" controls>
 						<source src="assets/files/images/mgp3/wheel.mp4" type="video/mp4">
 						Your browser does not support the video tag.
-					  </video>
-					<h3>Parallel Prototyping - Car Chase Collision</h3>
+					</video>
+					<br>
+					<b>Car Chase Collision</b>
 					<p>
 						The car chase idea was inspired by the car toys that you wind up by
 						rolling it backwards and then releasing it so that it moves a distance
@@ -161,7 +163,36 @@
 					<video width="320" height="240" controls>
 						<source src="assets/files/images/mgp3/car_wheel.mp4" type="video/mp4">
 						Your browser does not support the video tag.
-					  </video>
+					</video>
+					<br>
+					<br>
+					<h3>Kick the Car (pending project title)</h3>
+					<b>Materials</b>
+					<ul>
+						<li>Car chassis with box for electronics</li>
+						<li>Breadboard</li>
+						<li>Arduino Nano 33 IoT</li>	
+						<li>USB type A cable </li>	
+						<li>Wires</li>	
+						<li>9V Battery Snap with Barrel</li>	
+					</ul>
+					<b>How Does It Work?</b>
+					<p>
+						A pull back car is a toy car that uses springs to store energy when pulled back.
+						When the car is released, the energy stored in the spring moves it forward.
+						Instead of springs, we utilize the Arduino's IMU and accelerometer sensor
+						to detect any movements the Arduino makes.
+						For example, our car will move forward if you push or kick the back of the car
+						because the impact of the Arduino can be coded to make DC motors spin the wheels.
+					</p>
+					<b>Safety Casing</b>
+					<p>
+						We already had a simple car chassis with enough surface area to place 
+						our breadboard. However, having the electronics exposed is could be a
+						safety and operation concern when users could easily kick with enough force to 
+						disconnect wires and the battery. Therefore, we repurposed a 3D printed
+						container to house the electronics in.
+					</p>
 				</article>
 
 				<article id="cheerio" class="panel">
