trying to add slideshow

--- a/index.html
+++ b/index.html
@@ -121,6 +121,16 @@
 						3 interaction concepts and created low-fidelity prototypes.
 					</p>
 					<img src="assets/files/images/mgp3/mgp3_ideas.png" class="image centered" width="60%" alt="">
+					
+				
+					<div class="slideshow-container">
+						<div class="slides fade">
+							<img src="assets/files/images/mgp3/car2.jpg" alt="professional headshot of sarah huang">
+						</div>
+						<!-- Next and previous buttons -->
+						<a class="prev arrow" onclick="nextSlide(-1)">&#10094;</a>
+						<a class="next arrow" onclick="nextSlide(1)">&#10095;</a>								
+					</div>
 					<h3>Parallel Prototyping - What can IMUs do?</h3>
 					<b>Wrist Cup, Wrist Light</b>
 					<p>
@@ -131,7 +141,7 @@
 						As for the flashlight, maybe it could adjust up, down, left, or right depending on
 						small movements from the wrist. 
 					</p>
-					<img src="assets/files/images/mgp3/wrist_cup_sketch.png" class="image centered" width="60%" alt="">
+					<img src="assets/files/images/mgp3/+wrist_cup_sketch.png" class="image centered" width="60%" alt="">
 					<img src="assets/files/images/mgp3/wrist_cup_proto.jpg" class="image centered" width="60%" alt="">
 					<img src="assets/files/images/mgp3/wrist_light.jpg" class="image centered" width="60%" alt="">
 					<b>RC Wheel</b>
@@ -166,7 +176,8 @@
 					</video>
 					<br>
 					<br>
-					<h3>Kick the Car (pending project title)</h3>
+					<h3>Final Project: Kick the Car (pending project title)</h3>
+					<img src="assets/files/images/mgp3/car2.jpg" class="image centered" width="60%" alt="">
 					<b>Materials</b>
 					<ul>
 						<li>Car chassis with box for electronics</li>
@@ -193,6 +204,7 @@
 						disconnect wires and the battery. Therefore, we repurposed a 3D printed
 						container to house the electronics in.
 					</p>
+					<b>Video Demo</b>
 				</article>
 
 				<article id="cheerio" class="panel">
