writing more justification

--- a/index.html
+++ b/index.html
@@ -117,20 +117,14 @@
 					<h3>Idea Brainstorming</h3>
 					<p>
 						The IMU has a gyroscope to measure rotation and accelerometer to detect motion. 
-						With those concepts, we came up with 20 ideas. We ultimately dwindled it down to
-						3 interaction concepts and created low-fidelity prototypes.
+						With those concepts, we came up with 20 ideas and various sketches. 
+						We ultimately dwindled it down to
+						3 interaction concepts and created low-fidelity prototypes. 
 					</p>
 					<img src="assets/files/images/mgp3/mgp3_ideas.png" class="image centered" width="60%" alt="">
-					
-				
-					<div class="slideshow-container">
-						<div class="slides fade">
-							<img src="assets/files/images/mgp3/car2.jpg" alt="professional headshot of sarah huang">
-						</div>
-						<!-- Next and previous buttons -->
-						<a class="prev arrow" onclick="nextSlide(-1)">&#10094;</a>
-						<a class="next arrow" onclick="nextSlide(1)">&#10095;</a>								
-					</div>
+					<img src="assets/files/images/mgp3/mgp3_sketch1.png" class="image centered" width="60%" alt="">
+					<img src="assets/files/images/mgp3/mgp3_sketch2.png" class="image centered" width="60%" alt="">
+					<img src="assets/files/images/mgp3/mgp3_sketch3.png" class="image centered" width="60%" alt="">
 					<h3>Parallel Prototyping - What can IMUs do?</h3>
 					<b>Wrist Cup, Wrist Light</b>
 					<p>
@@ -187,6 +181,14 @@
 						<li>Wires</li>	
 						<li>9V Battery Snap with Barrel</li>	
 					</ul>
+					<b>Why Did We Choose This?</b>
+					<p>
+						In the example projects we looked at, many of them utilizied the gyroscope and not the
+						accelerometer. Also, the idea of hitting the project to make it move is entertaining.
+						My partner, Christian, already had a car chasis that could be repurposed for this project.
+						We wanted a project that fulfilled the project objective, was simple to code, and did
+						not require buying additional materials.
+					</p>
 					<b>How Does It Work?</b>
 					<p>
 						A pull back car is a toy car that uses springs to store energy when pulled back.
