--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<section>
 						<div class="row">
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#imu" class="image fit"><img src="assets/files/images/project_thumbnails/wip_260x195.png" alt=""></a>
+								<a href="#imu" class="image fit"><img src="assets/files/images/project_thumbnails/kickcar.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<a href="#cheerio" class="image fit"><img src="assets/files/images/project_thumbnails/cheerio_250x195.png" alt=""></a>
@@ -105,9 +105,9 @@
 
 				<article id="imu" class="panel">
 					<header>
-						<h2>IMU & Motor Project (mgp3) - <a href="https://github.com/sarhuang/cosc594/tree/main/mgp3" class="fa fa-link"><span>GitHub</span></a></h2>
+						<h2>Kickcar (mgp3) - <a href="https://github.com/sarhuang/cosc594/tree/main/mgp3" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
-					<img src="assets/files/images/project_thumbnails/wip_260x195.png" class="image centered" width="40%" alt="">
+					<img src="assets/files/images/project_thumbnails/kickcar.png" class="image centered" width="40%" alt="">
 					<h3>Purpose</h3>
 					<p>
 						Use the IMU (along with other sensors if desired) to
@@ -135,7 +135,7 @@
 						As for the flashlight, maybe it could adjust up, down, left, or right depending on
 						small movements from the wrist. 
 					</p>
-					<img src="assets/files/images/mgp3/+wrist_cup_sketch.png" class="image centered" width="60%" alt="">
+					<img src="assets/files/images/mgp3/wrist_cup_sketch.png" class="image centered" width="60%" alt="">
 					<img src="assets/files/images/mgp3/wrist_cup_proto.jpg" class="image centered" width="60%" alt="">
 					<img src="assets/files/images/mgp3/wrist_light.jpg" class="image centered" width="60%" alt="">
 					<b>RC Wheel</b>
@@ -170,8 +170,8 @@
 					</video>
 					<br>
 					<br>
-					<h3>Final Project: Kick the Car (pending project title)</h3>
-					<img src="assets/files/images/mgp3/car2.jpg" class="image centered" width="60%" alt="">
+					<h3>Final Project: Kickcar</h3>
+					<img src="assets/files/images/mgp3/kickcar.jpg" class="image centered" width="60%" alt="">
 					<b>Materials</b>
 					<ul>
 						<li>Car chassis with box for electronics</li>
@@ -179,7 +179,8 @@
 						<li>Arduino Nano 33 IoT</li>	
 						<li>USB type A cable </li>	
 						<li>Wires</li>	
-						<li>9V Battery Snap with Barrel</li>	
+						<li>Transistor</li>
+						<li>9V Battery Snap with Barrel (x2)</li>	
 					</ul>
 					<b>Why Did We Choose This?</b>
 					<p>
@@ -204,7 +205,9 @@
 						our breadboard. However, having the electronics exposed is could be a
 						safety and operation concern when users could easily kick with enough force to 
 						disconnect wires and the battery. Therefore, we repurposed a 3D printed
-						container to house the electronics in.
+						container to house the electronics in. For the future, we want to create a bigger box
+						for the wires because we didn't anticipate how much room they and the alligator clips
+						would take.
 					</p>
 					<b>Video Demo</b>
 				</article>
