--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<section>
 						<div class="row">
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#imu" class="image fit"><img src="assets/files/images/project_thumbnails/kickcar.png" alt=""></a>
+								<a href="#kickcar" class="image fit"><img src="assets/files/images/project_thumbnails/kickcar.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<a href="#cheerio" class="image fit"><img src="assets/files/images/project_thumbnails/cheerio_250x195.png" alt=""></a>
