--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				</article>
 
 
-				<article id="imu" class="panel">
+				<article id="kickcar" class="panel">
 					<header>
 						<h2>Kickcar (mgp3) - <a href="https://github.com/sarhuang/cosc594/tree/main/mgp3" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
