--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
 						would take.
 					</p>
 					<b>Video Demo</b>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/1t5oQjXhV_o?si=TdxUnvLg9jWNQx4Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 				</article>
 
 				<article id="cheerio" class="panel">
